# ChessEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md
puzzles/: equalFens.txt
src/: agent.cpp  board.cpp  chess.cpp  gameToGif.py  main.cpp  mcts.cpp  move.cpp  moveGenerator.cpp  moveMapping.cpp  piece.cpp  resNet.cpp  resNet.py  train.py
src/files/: moves.csv
src/include/: agent.h  board.h  chess.h  mcts.h  move.h  moveGenerator.h  moveMapping.h  piece.h  resNet.h
